[package]
name = "agora-key-share-proofs"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-poly = "0.4.2"
blsful = "2.5"
blstrs_plus = { version = "0.8.17", features = ["ark"] }
hex = "0.4"
itertools = "0.13"
merlin = "3"
rand = "0.8"
rand_chacha = "0.3"
rayon = "1.10"
serde = "1.0"
serde_bare = "0.5"
serde_json = "1.0"
sha2 = "0.10"
subtle = "2.5"
thiserror = "1.0"
vsss-rs = { version = "4.3.0", features = ["blstrs_plus"] }
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
maplit = "1"
rand_chacha = "0.3"
serde_json = "1.0"